
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-06-08 DariusIII
	Chg: Change qtip2 version used in Omicron theme
	Fix: Fix check all icon behaviour in Omicron theme
	Chg: Switch Omicron to iCheck checkbox style and new Pnotify style.
	Upd: Fix no background images in Charisma/Omicron themes, change type of iCheck used in Omicron.
2016-06-08 niel
	Chg: Update version of unionofrad/lithium in composer.lock
2016-06-07 ruhllatio
	Chg: Change DATEDIFF constraints to constant comparisons to allow index scan
	Chg: AniDB site query optimization and code cleanup (indentations)
2016-06-07 DariusIII
	Fix: Revert Gamma to use customized utils.js and not the shared one. Fixes issue #2166
2016-06-06 niel
	Chg: Update minimum PHP requirements to 5.6.20+
	Mrg: Update schema to use groups_id instead of group_id. Note this does note affect CBPM tables which will be done in a separate commit.
2016-06-06 DariusIII
	Chg: Enable third pre channel, remove bad sources from ircscraper_settings_example and IRCScraper class.
2016-06-05 ruhllatio
	Fix: Fallback TV search now returns only specific episodes / also fix Season pack lookups
2016-06-03 ruhllatio
	Fix: TV Processing returns alias for wrong show first instead of direct show title match
	Fix: Local lookup not working for airdates because Sxx/Exx is still being set as junk data
2016-06-03 DariusIII
	Add: Add multiple channels support to IRCScraper
2016-06-02 ruhllatio
	Add: JSON Response formatting
	Fix: Need additional enclosure in TV Search API post-query check
	Fix: Additional issues with TV API search logic
	Add: Support for Season only searches with fast TV query
	Chg: Improve JSON Response class and refactor to make it like XML class